# QuantFinal20261

./: .gitignore  .sqlx  Cargo.toml  README.md  build-all-services-delta.sh  build-all-services.sh  build-market-data-service.sh  clean.sh  cockroachdb-intelligence-schema-job.yaml  create-users-for-auth-and-ledger.sh  fix-sqlx-clean.sh  fix_duplicate_deps.sh  remove-offline.sh
backend/: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile.aml-monitoring-service  Dockerfile.api-gateway  Dockerfile.auth-service  Dockerfile.core-trading  Dockerfile.kyc-service  Dockerfile.ledger-service  Dockerfile.market-data-service  Dockerfile.onboarding-service  Dockerfile.reconciliation-service  Dockerfile.risk-service  Dockerfile.trading-service  Dockerfile.user-service  Dockerfile.wallet-service  auth-service-clean.yaml  auth-service-deployment.yaml  auth-service-fixed.yaml  auth-service.yaml  azure-pipelines.yml  build-1-image.sh  build-all-images-1.sh  build-all-images-compliance.sh  build-all-images-identity.sh  build-all-images-trade.sh  build-all-images.sh  build-all-services.sh  build-all.sh  build-api-gw.sh  cockroach-config.yaml  cockroach-secret.yaml  cockroachdb-compliance-migrations.yaml  cockroachdb-create-schemas.yaml  cockroachdb-init.yaml  cockroachdb-intelligence-schema-update.yaml  cockroachdb-schema-init.yaml  cockroachdb-schema-job.yaml  cockroachdb.yaml  compliance-migrations-configmap.yaml  (+37 more)
backend/.github/workflows/: tests.yml
backend/.sqlx/: query-141f4cc05420c7cc77429a4932f67ac6c93163e8ce3f0890e544aab9e599f865.json  query-234eea63607aeb7be95be9a121d770924eb707d7975e432c881df00108a71e54.json  query-2b63ebb1723404e1532f55616bb1f26331d9da34cc91e74f031a68db3d242d15.json  query-3350396807e478ccf39fe8382fb54f7d9f773abf06852378a144babae2f49511.json  query-469b1d6f38752714f985a4a4218e76d24899acc4845c50b3974d4deeb84454d5.json  query-4bd3b13878ba4decc0c670e8217dcdc447eab0cea6f0d9caa8ee65c44b6cf0fb.json  query-6127a72e0a738d3ca9a5cdcd90d119ba2f2e8d45bc8e1ee2b207db1f21bd2813.json  query-64010d8691cd468e8784fc10d5ca42d41af6b99d45b0ad1eb70dd3c5cf0309a9.json  query-7c13bf260ab538d9fce4dc21d1f9a6fdad3380f4fcc61fece965a0706cebfbb7.json  query-92e393a0fef192d8c89aa52929b746c98ea724125cc7aed037d1c976bafaffd3.json  query-95eb7b7c6b058cde949b903f3075db6c95fba6c18fe68e54d6fec7739f52332d.json  query-95ef61743bf8da58ea4997b85aaf229e543bbab7abee0e72c6d56d2a986bc078.json  query-ac383c1eb471b9edbff93ee616f4ae5370b930b120718eadc989b6895ea5745d.json  query-b744014793cdf5b84fe7e7ee1740efbe62ae9030a5573ba36db2f5fde3522c6d.json  query-bbf600f17712173206b754fd7c8f8f8fd46a03bf54e824ff8046c37a88407123.json  query-bdce749f27933d154f44ed6e1bc40c2f8c795e55082fde81e8024293a398c894.json  query-dd1970254a6d0f929351afe47d38a0644f8290900cd741f4e6c49deb795d6d60.json  query-e2bcc6137d8663f46fa18557961d11df071d72b41d15100c47e73ccc38a0aefe.json
backend/backend/services/auth-service/: Cargo.toml
backend/compliance-migration/: 001_init.sql
backend/libs/common/: Cargo.toml
backend/libs/common/src/: auth_messages.rs  lib.rs  market.rs  messaging.rs  trading.rs  ws.rs
backend/libs/db/: Cargo.toml
backend/libs/db/src/: lib.rs
backend/services/: cockroach-migration-job.yaml  identity-cockroach-migration-job.yaml  identity-schema-configmap.yaml  identity-schema-job.yaml  nats-ha.yaml  nats-values.yaml
backend/services/aml-monitoring-service/: Cargo.toml  Cargo.toml-bak  Dockerfile  docker-build-correct.sh
backend/services/aml-monitoring-service/migrations/: 0001_init.sql
backend/services/aml-monitoring-service/src/: db.rs  main.rs  models.rs  routes.rs
backend/services/api-gateway/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/api-gateway-axum0.6/: Cargo.toml  Dockerfile
backend/services/api-gateway-axum0.6/src/: auth_client.rs  auth_middleware.rs  identity.rs  main.rs  state.rs
backend/services/api-gateway/migrations/: 0001_request_log.sql  0002_rate_limit.sql  0003_api_keys.sql
backend/services/api-gateway/src/: auth_client_http.rs  auth_client_nats.rs  db.rs  error.rs  identity.rs  main.rs  nats_client.rs  openapi.rs  state.rs  user_client.rs
backend/services/api-gateway/tools/: add_market_proxy_to_gateway.sh
backend/services/auth-service/: Cargo.toml  Dockerfile  docker-build-correct.sh  restore-sqlx-macros.sh
backend/services/auth-service/migrations/: 0001_auth_schema.sql  0001_auth_users.sql  0001_create_users.sql  0002_auth_sessions.sql  0002_create_roles.sql  0002_mfa_tables.sql  0003_create_user_roles.sql  0003_email_otp.sql  0003_refresh_tokens.sql  0004_create_credentials.sql  0004_sessions.sql  0004_totp.sql  0005_create_sessions.sql  0005_refresh_tokens.sql  (+30 more)
backend/services/intelligence-service/: Cargo.toml  Dockerfile
backend/services/kyc-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/ledger-service/: .env.local  .env.prod  Cargo.toml  CronJob.yaml  Dockerfile  Dockerfile.pytest  Makefile  alembic-env.sh  alembic.ini  conftest.py  docker-build-correct.sh  ledger-pytest-debug.yaml  pytest-job.yaml  requirements.txt  vi
backend/services/market-data-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/migrations/: identity.sql  trade-domain.sql
backend/services/onboarding-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/reconciliation-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/risk-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/trading-service/: Cargo.toml  Dockerfile  docker-build-correct.sh  run.sh
backend/services/user-service/: Cargo.toml  Dockerfile  docker-build-correct.sh
backend/services/wallet-service/: 1  Cargo.toml  Dockerfile  docker-build-correct.sh  vi
backend/tests/: config.py  runner.py  test_all_endpoints.py  utils.py
backend/tests/services/: chaos.py  db_sanity.py  e2e_trading_flow.py  journey_kyc.py  journey_ledger.py  journey_onboarding.py  journey_reconciliation.py  journey_risk.py  journey_trading.py  journey_user.py  journey_wallet.py  load_basic.py  nats_events.py  utils.py
(+1136 files in other folders)
