[workspace]
resolver = "2"

members = [
    "backend/services/auth-service",
    "backend/services/ledger-service",
    "backend/services/trading-service",
    "backend/services/user-service",
    "backend/services/risk-service",
    "backend/services/market-data-service",
    "backend/services/api-gateway",
    "backend/services/wallet-service",
    "backend/services/reconciliation-service",
    "backend/services/aml-monitoring-service",
    "backend/services/onboarding-service",
    "backend/services/kyc-service",
    "backend/libs/common"
]

[workspace.dependencies]
# Core web stack
axum = { version = "0.6", features = ["ws", "macros", "json"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
http = "0.2"
once_cell = "1.19"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# NATS
async-nats = "0.34"

# SQLX
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

