[workspace]
resolver = "2"

members = [
    "services/auth-service",
    "services/ledger-service",
    "services/trading-service",
    "services/user-service",
    "services/risk-service",
    "services/market-data-service",
    "services/api-gateway",
    "services/wallet-service",
    "services/reconciliation-service",
    "services/aml-monitoring-service",
    "libs/common"
]
[patch.crates-io]
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "7.1.0" }
