[workspace]
resolver = "2"

members = [
    "services/auth-service",
    "services/ledger-service",
    "services/trading-service",
    "services/user-service",
    "services/risk-service",
    "services/market-data-service",
    "services/api-gateway",
    "services/wallet-service",
    "services/reconciliation-service",
    "services/aml-monitoring-service",
    "services/onboarding-service",
    "services/kyc-service",
    "services/intelligence-service",
    "libs/common"
]

[workspace.dependencies]
# Core web stack
axum = { version = "0.6.20", features = ["ws", "macros", "json"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
#axum = "=0.6.20"
http = "0.2"
once_cell = "1.19"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# NATS
async-nats = "0.34"


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

