[package]
name = "aml-monitoring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID + timestamps
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging + tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Tower (middleware)
tower = "0.4"
anyhow = "1.0"
axum.workspace = true
tower-http.workspace = true
http.workspace = true

[package.metadata.sqlx]
offline = false

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros"
]

