[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace shared deps
axum.workspace = true
tower-http.workspace = true
http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-nats.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenAPI / Swagger
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Internal workspace crate
common = { path = "../../libs/common" }

# Utoipa codegen
utoipa-gen = "5.4.0"

# Extra gateway-specific deps
futures = "0.3"
futures-util = "0.3"
cookie = "0.18"

# HTTP + WebSocket proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# tower stack
tower = "0.4"

# utils
thiserror = "1"
anyhow = "1"
dashmap = "5"
tokio-util = "0.7"
headers = "0.4"
http-body-util = "0.1"
once_cell.workspace = true
hyper = "0.14"

[package.metadata.sqlx]
offline = true

