[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace shared deps
tower-http.workspace = true
http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-nats.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
dotenvy = "0.15"

# Axum with headers feature (REQUIRED for TypedHeader)
axum = { version = "0.6", features = ["headers", "ws"] }

# OpenAPI / Swagger
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-gen = "5.4.0"

# Internal workspace crate
common = { path = "../../libs/common" }

# Extra gateway-specific deps
futures = "0.3"
futures-util = "0.3"
cookie = "0.18"

# HTTP + WebSocket proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# tower stack
tower = "0.4"

# utils
thiserror = "1"
anyhow = "1"
dashmap = "5"
tokio-util = "0.7"
headers = "0.4"
http-body-util = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
hyper = "0.14"

[package.metadata.sqlx]
offline = false

