[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-nats = "0.34"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
common = { path = "../../libs/common" }
subtle = "2.5"
ipnetwork = "0.20"
time = { version = "0.3", features = ["macros", "formatting"] }
argon2 = "0.5"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
thiserror = "1"
aes-gcm = "0.10"
rand_core = "0.6"
base64 = "0.21"

axum.workspace = true
tower-http.workspace = true
http.workspace = true

[package.metadata.sqlx]
offline = false

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros"
]

