[package]
name = "ledger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

async-nats = "0.34"
futures-util = "0.3"

dotenvy = "0.15"
common = { path = "../../libs/common" }

axum.workspace = true
tower-http.workspace = true
http.workspace = true

