[package]
name = "ledger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP server (for /health)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# NATS
async-nats = "0.34"
futures-util = "0.3"

# Shared library
common = { path = "../../libs/common" }

# SQLx (Postgres + runtime + macros)
[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
]

[package.metadata.sqlx]
offline = false

