[package]
name = "market-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
common = { path = "../../libs/common" }

# --- TLS + Crypto Provider (Rustls 0.23+) ---
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
webpki-roots = "0.26"

# --- WebSocket Clients using Rustls ---
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

axum.workspace = true
tower-http.workspace = true
http.workspace = true
