[package]
name = "market-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../libs/common" }

tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

tokio-tungstenite = "0.21"
tungstenite = "0.21"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

chrono = { version = "0.4", features = ["serde"] }

async-nats = "0.33"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

sha2 = "0.10"
base64ct = "=1.6.0"

uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }

[features]
default = []

[package.metadata.sqlx]
offline = false

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros"
]

