[package]
name = "onboarding-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.34"
uuid = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3" 
futures-util = "0.3"
common = { path = "../../libs/common" }

