[package]
name = "onboarding-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.34"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3" 
futures-util = "0.3"
common = { path = "../../libs/common" }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }

tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

axum.workspace = true
tower-http.workspace = true
http.workspace = true

