[package]
name = "reconciliation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
common = { path = "../../libs/common" }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

axum.workspace = true
tower-http.workspace = true
http.workspace = true

[package.metadata.sqlx]
offline = false

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
]

