[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }

hyper = { version = "1.2", features = ["full"] }

common = { path = "../../libs/common" }
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.34"
futures-util = "0.3"

