[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
async-nats = "0.34"
common = { path = "../../libs/common" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"

axum.workspace = true
tower-http.workspace = true
http.workspace = true

[package.metadata.sqlx]
offline = false

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    
]

