[package]
name = "wallet-service"
version = "0.4.7"
edition = "2021"

[dependencies]
anyhow = "1"

# Axum 0.6 (correct version)
axum = { version = "0.6.20", features = ["macros", "json"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }

# SQLx 0.7 with Postgres + Rustls
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }

# NATS
async-nats = "0.34"

futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

dotenvy = "0.15"

# HTTP client for Binance
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

chrono = { version = "0.4", features = ["serde"] }

# Required for Axum 0.6
tower = "0.4"
hyper = "0.14"
http = "0.2"
openssh-keys = "0.6"
rsa = "0.8.2"
pkcs8 = "0.9"
digest = "0.10"
signature = "2.1"
